==V5.4.0.12-Beta==
*  Ticket 3: Add command line to +toggle monitor window+
----

==V5.4.0.10-Release==
* Updated TOC for patch 5.4. 
* Monitor Window
** Closing now also update the module enable/disable settings.
** Improved position saving methode.
** Minor cosmetic changes: sizer, minimal-height